src/styles/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.homepage-header-container {
  min-height: 650px;
  background-image: url(../images/headerBGNotes.webp);
  background-color: #060610;
  background-position: center;
  background-size: cover;
  display: flex;
  justify-content: center;
  position: relative;
}
@media screen and (max-width: 900px) {
  .homepage-header-container {
    min-height: 550px;
  }
}
@media screen and (max-width: 600px) {
  .homepage-header-container {
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    background-position: right center;
    min-height: 100vh;
  }
}
@media screen and (max-width: 450px) {
  .homepage-header-container {
    min-height: 630px;
  }
}
.homepage-header-container .header-note1 {
  position: absolute;
  width: 606px;
  height: 506px;
  left: 0;
  top: 0;
}
.homepage-header-container .hide-lg {
  display: none;
}
.homepage-header-container .header-note2 {
  position: absolute;
  width: 506px;
  height: 406px;
  right: 0;
  bottom: 0;
}
.homepage-header-container .header-circle1 {
  position: absolute;
  width: 220px;
  height: 220px;
  left: -5rem;
  top: 30%;
  opacity: 0.4;
  background: #feee5c;
  filter: blur(110.5px);
  z-index: 1;
}
.homepage-header-container .header-circle2 {
  position: absolute;
  width: 220px;
  height: 220px;
  right: 0rem;
  bottom: -1rem;
  opacity: 0.4;
  background: #5cfee1;
  filter: blur(110.5px);
  z-index: 1;
}

.header-desc {
  color: #fff;
  font-family: "Poppins", sans-serif;
  max-width: 900px;
  text-align: center;
  display: flex;
  align-items: center;
  flex-direction: column;
}
.header-desc h1 {
  font-weight: 800;
  font-size: 3rem;
  margin-top: 2.5rem;
  transition: all 0.3s ease;
}
@media screen and (max-width: 900px) {
  .header-desc h1 {
    font-size: 2.5rem;
  }
}
@media screen and (max-width: 720px) {
  .header-desc h1 {
    font-size: 2.2rem;
  }
}
@media screen and (max-width: 600px) {
  .header-desc h1 {
    margin-top: 5rem;
  }
}
@media screen and (max-width: 450px) {
  .header-desc h1 {
    margin-top: 3rem;
    font-size: 1.8rem;
  }
}
.header-desc h1 span {
  color: #e37921;
  text-decoration: underline;
  text-decoration-thickness: 2px;
  letter-spacing: 0.01em;
  font-weight: 500;
  text-transform: uppercase;
}
.header-desc p {
  font-weight: 400;
  font-size: 1.5rem;
  max-width: 650px;
  margin-top: 0.8rem;
  transition: all 0.3s ease;
}
@media screen and (max-width: 900px) {
  .header-desc p {
    font-size: 1.3rem;
  }
}
@media screen and (max-width: 720px) {
  .header-desc p {
    max-width: 550px;
    font-size: 1.2rem;
  }
}
@media screen and (max-width: 600px) {
  .header-desc p {
    max-width: 450px;
  }
}
@media screen and (max-width: 500px) {
  .header-desc p {
    max-width: 400px;
    font-size: 1rem;
  }
}
@media screen and (max-width: 450px) {
  .header-desc p {
    font-size: 0.9rem;
    max-width: 350px;
  }
}

.header-image-container {
  position: absolute;
  bottom: -5rem;
}
@media screen and (max-width: 900px) {
  .header-image-container {
    bottom: -6rem;
  }
}
@media screen and (max-width: 600px) {
  .header-image-container {
    position: relative;
    top: 2rem;
  }
}
.header-image-container button {
  cursor: pointer;
  position: absolute;
  background: #e37921;
  border-radius: 0.8rem;
  color: #fff;
  font-size: 2rem;
  font-weight: 600;
  padding: 1.5rem;
  border: none;
  outline: none;
  width: 100%;
  margin-top: 2rem;
  transition: all 0.3s ease;
}
@media screen and (max-width: 600px) {
  .header-image-container button {
    font-size: 1.5rem;
    padding: 1rem;
  }
}
.header-image-container button:hover {
  background: #cf752b;
  box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.11);
}
@media screen and (max-width: 500px) {
  .header-image-container button {
    max-width: 400px;
  }
}
@media screen and (max-width: 450px) {
  .header-image-container button {
    width: 90%;
    transform: translate(6%, 0%);
    font-size: 1.3rem;
  }
}
.header-image-container .header-button-container {
  position: relative;
}
.header-image-container .header-button-container img {
  position: absolute;
}
@media screen and (max-width: 700px) {
  .header-image-container .header-button-container img {
    display: none;
  }
}
.header-image-container .header-button-container img:nth-child(1) {
  top: -3rem;
  left: -15rem;
}
.header-image-container .header-button-container img:nth-last-child(1) {
  top: -3rem;
  right: -15rem;
}

.header-image {
  background-color: #fff;
  box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.11);
  max-width: 680px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 1rem;
  border-radius: 0.8rem;
  transition: all 0.3s ease;
}
@media screen and (max-width: 900px) {
  .header-image {
    max-width: 580px;
  }
}
@media screen and (max-width: 600px) {
  .header-image {
    max-width: 400px;
    padding: 0.5rem;
  }
}
@media screen and (max-width: 500px) {
  .header-image {
    margin: 0 1rem;
  }
}
@media screen and (max-width: 450px) {
  .header-image {
    max-width: 350px;
  }
}
.header-image div {
  width: 100%;
}
.header-image div img {
  width: 100%;
  height: 100%;
  cursor: pointer;
  -o-object-fit: cover;
  object-fit: cover;
  border-radius: 0.8rem;
}
.header-image .header-feature-cards {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Poppins", sans-serif;
  display: flex;
  font-size: 1.5rem;
  font-weight: 500;
  margin-top: 1rem;
}
@media screen and (max-width: 600px) {
  .header-image .header-feature-cards {
    margin-top: 0.3rem;
  }
}
.header-image .header-feature-cards p {
  width: 300px;
}
@media screen and (max-width: 900px) {
  .header-image .header-feature-cards p {
    width: 250px;
    font-size: 1.3rem;
  }
}
@media screen and (max-width: 600px) {
  .header-image .header-feature-cards p {
    width: 250px;
    font-size: 1rem;
    margin-top: 0rem;
  }
}
/* ... */

